k8s/infra/auth/vault/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-http
  namespace: vault
spec:
  parentRefs:
    - name: internal-selfsigned
      namespace: gateway
  hostnames:
    - "vault.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault
          port: 8200
